maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:5: error: missing argument list for method aBiscuit in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `aBiscuit _` or `aBiscuit(_,_)` instead of `aBiscuit`.
      if (aBiscuit) {
          ^