maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
	for (i<-1 to getMondeLargeur) {
    for (j<-1 to getMondeHauteur) {
      if (aBiscuit) {
        setIndication(i,j,0)
      }
    }
  }
}